sna: Only reload an active HW cursor

Do not attempt to restore the cursor handle if a SW cursor is currently
active. In particular, this prevents a crash after modesetting if we
never had a real cursor (for example output offloading).

Reported-by: Tomas Pruzina <pruzinat@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=77283
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>